<resources>
    <string name="app_name">PT</string>
    <string name="length_of_workout">Length of workout</string>
    <string name="focal_body_parts">Focal Body Parts</string>
    <string name="workout_regiment_label">Workout Regiment</string>
    <string name="preworkout_label">Workout Creation</string>
    <string name="workout_label">Workout</string>
    <string name="workout_description_label">Workout Description</string>
    <string name="abdominals">Abdominals</string>
    <string name="abductors">Abductors</string>
    <string name="adductors">Adductors</string>
    <string name="biceps">Biceps</string>
    <string name="calves">Calves</string>
    <string name="chest">Chest</string>
    <string name="forearms">Forearms</string>
    <string name="glutes">Glutes</string>
    <string name="hamstring">Hamstring</string>
    <string name="lats">Lats</string>
    <string name="lower_back">Lower Back</string>
    <string name="middle_back">Middle Back</string>
    <string name="neck">Neck</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="shoulders">Shoulders</string>
    <string name="traps">Traps</string>
    <string name="triceps">Triceps</string>
    <string name="workout_difficulty">Difficulty</string>
    <string name="bands">Bands</string>
    <string name="barbell">Barbell</string>
    <string name="equipment_accessibility">Equipment to Exclude</string>
    <string name="bicycle">Bicycle</string>
    <string name="cable">Cable</string>
    <string name="chair">Chair</string>
    <string name="cones">Cones</string>
    <string name="dumbbell">Dumbbell</string>
    <string name="exercise_ball">Exercise Ball</string>
    <string name="ez_curl_bar">E-Z Curl Bar</string>
    <string name="foam_roll">Foam roll</string>
    <string name="kettlebell">Kettlebell</string>
    <string name="workout_machines">Workout Machines</string>
    <string name="medicine_ball">Medicine Ball</string>
    <string name="weight_plate">Weight Plate</string>
    <string name="rickshaw">Rickshaw</string>
    <string name="roller">Roller</string>
    <string name="rope">Rope</string>
    <string name="sled">Sled</string>
    <string name="toning_wheel">Toning Wheel</string>
    <string name="trap_bar">Trap Bar</string>
    <string name="treadmill">Treadmill</string>
    <string name="workout_box">Workout Box</string>
    <string name="make_workout">Make Workout</string>
    <string name="row">Row</string>
    <string name="stone">Stone</string>
    <string name="select_the_type_of_workout">Workout Type</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="warm_up"><u>Warm Up</u></string>
    <string name="your_workout_for_today"><u>Your Workout for Today</u></string>
    <string name="cool_off"><u>Cool Off</u></string>
    <string name="do_you_have_a_partner">Partner Available</string>
    <string name="bosu_ball">Bosu Ball</string>
    <string name="workout_divider_text">Workout</string>
    <string name="empty_warm_and_cool_off_exercises">There are no cool offs/warm up exercises that meet this criteria</string>
    <string name="picture_here">Picture here</string>
    <string name="straps">Straps</string>
    <string name="v_bar">V-Bar</string>
    <string name="t_bar">T-bar</string>
    <string name="jumping_rope">Jumping Rope</string>
    <string name="workout_detail_image">imageId</string>
    <string name="description_example">1. Begin standing with a barbell close to your shins. Your feet should be directly under your hips with your feet turned out slightly. Grip the bar with a double overhand grip or hook grip, about shoulder width apart. Squat down to the bar. Your spine should be in full extension, with a back angle that places your shoulders in front of the bar and your back as vertical as possible. \n\n  2. Begin by driving through the floor through the front of your heels. As the bar travels upward, maintain a constant back angle. Flare your knees out to the side to help keep them out of the bar\'s path. \n\n 3. After the bar crosses the knees, complete the lift by driving the hips into the bar until your hips and knees are extended.</string>
    <string name="workout_image_alt_image_text">Workout Image</string>
    <string name="empty_image">Empty Image</string>
    <string name="start_tabata">Start TABATA</string>
</resources>