<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tmosq.com.pt.activity.PreWorkoutActivity">

    <data>
        <variable
            name="viewModel"
            type="tmosq.com.pt.viewModel.EquipmentViewModel" />
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/equipment_accessibility"
                android:textSize="@dimen/text_subhead"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/select_all_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="@{viewModel.clickSelectAllEquipmentCheckBox}"
                android:text="@string/select_all"
                android:textColor="@color/hyperlinkColor"
                android:textSize="@dimen/text_body" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/bands_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bands"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/barbell_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barbell" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/bicycle_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bicycle"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/cable_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chair_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chair"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/cones_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cones" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/dumbbell_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dumbbell"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/exercise_ball_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise_ball" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/ez_curl_bar_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ez_curl_bar"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/foam_roll_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/foam_roll" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/kettlebell_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kettlebell"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/machine_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_machines" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/medicine_ball_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine_ball"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/plate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_plate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rickshaw_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rickshaw"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/roller_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roller" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rope_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rope"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/row_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/sled_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sled"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/stone_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/straps_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/straps"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/toning_wheel_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toning_wheel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <CheckBox
                android:id="@+id/trap_bar_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trap_bar"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/treadmill_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/treadmill" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/bosu_ball"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bosu_ball"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/v_bar_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/v_bar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/workout_box_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/workout_box"
                android:minWidth="@dimen/spacing_xxxlarge"/>

            <CheckBox
                android:id="@+id/t_bar_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_bar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/jumping_rope_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel.clickEquipmentCheckBox}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumping_rope"
                android:minWidth="@dimen/spacing_xxxlarge"/>
        </LinearLayout>
    </LinearLayout>
</layout>