<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tmosq.com.pt.activity.WorkoutDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium">

            <ImageView
                android:id="@+id/workout_image_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/workout_image_alt_image_text"
                android:transitionName="@string/workout_detail_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pt_logo"
                tools:srcCompat="@drawable/pt_logo" />

            <TextView
                android:id="@+id/workout_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/workout_image_view"
                tools:text="Roller Mains" />

            <TextView
                android:id="@+id/workout_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/workout_title"
                tools:text="@string/description_example" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>